--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "serve": "yarn build; node dist/index.js"
+    "start": "yarn build; node dist/index.js"
   },
   "dependencies": {
     "ws": "^7.3.0"
