--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "start": "yarn build; node dist/index.js"
   },
   "dependencies": {
+    "flatbuffers": "^1.12.0",
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/flatbuffers": "^1.10.0",
     "@types/node": "^14.0.6",
     "@types/ws": "^7.2.4",
     "typescript": "^3.9.3"
