--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "yarn build; node dist/index.js"
   },
   "dependencies": {
+    "@types/ip6addr": "^0.2.0",
     "flatbuffers": "^1.12.0",
+    "ip6addr": "^0.2.3",
     "ws": "^7.3.0"
   },
   "devDependencies": {
