--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "start": "yarn build; node dist/index.js"
+    "start": "yarn build; node dist/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "@types/ip6addr": "^0.2.0",
@@ -18,8 +19,11 @@
   },
   "devDependencies": {
     "@types/flatbuffers": "^1.10.0",
+    "@types/jest": "^26.0.0",
     "@types/node": "^14.0.6",
     "@types/ws": "^7.2.4",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
     "typescript": "^3.9.3"
   }
 }
