--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
     "@types/ip6addr": "^0.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "flatbuffers": "^1.12.0",
     "ip6addr": "^0.2.3",
     "ws": "^7.3.0"
