--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "scripts": {
     "build": "tsc",
+    "deploy": "yarn build; mkdir -p deploy && cp -R node_modules dist deploy",
     "start": "yarn build; node dist/index.js",
     "test": "jest"
   },
