--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "flatbuffers": "^1.12.0",
     "google-auth-library": "^6.0.2",
     "ip6addr": "^0.2.3",
+    "mongoose": "^5.10.2",
     "ws": "^7.3.0"
   },
   "devDependencies": {
     "@types/flatbuffers": "^1.10.0",
     "@types/jest": "^26.0.0",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.0.6",
     "@types/ws": "^7.2.4",
     "jest": "^26.0.1",
