--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flatbuffers": "^1.12.0",
     "google-auth-library": "^6.0.2",
     "ip6addr": "^0.2.3",
+    "level-ts": "^2.0.5",
     "mongoose": "^5.10.2",
     "ws": "^7.3.0"
   },
