--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/ip6addr": "^0.2.0",
+    "@types/leveldown": "^4.0.2",
+    "@types/levelup": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "flatbuffers": "^1.12.0",
     "google-auth-library": "^6.0.2",
     "ip6addr": "^0.2.3",
-    "level-ts": "^2.0.5",
+    "leveldown": "^5.6.0",
+    "levelup": "^4.4.0",
     "mongoose": "^5.10.2",
+    "npm": "^6.14.8",
     "ws": "^7.3.0"
   },
   "devDependencies": {
